--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
         <p id="result">20.0</p>
         <p id="category">Normal weight</p>
+        <a href="https://www.instagram.com/buneshwar_tendulkar?r=nametag">
+        <p id="created">	&#169; Buneshwar Tendulkar</p></a>
     </div>
 
     <!--Script-->
